// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/if/allman > if 1`] = `
"<script setup lang="ts">
if (foo)
{
  bar();
}
</script>

<template>
  <button
    type="button"
    @click="
      () =>
      {
        if (foo)
        {
          bar();
        }
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`vue/if/allman > if...else (1) 1`] = `
"<script setup lang="ts">
if (foo)
{
  bar();
}
else
{
  baz();
}
</script>

<template>
  <button
    type="button"
    @click="
      () =>
      {
        if (foo)
        {
          bar();
        }
        else
        {
          baz();
        }
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`vue/if/allman > if...else (2) - with comment 1`] = `
"<script setup lang="ts">
// foo is truthy
if (foo)
{
  bar();
}
// foo is falsy
else
{
  baz();
}
</script>

<template>
  <button
    type="button"
    @click="
      () =>
      {
        // foo is truthy
        if (foo)
        {
          bar();
        }
        // foo is falsy
        else
        {
          baz();
        }
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`vue/if/allman > if...elseif...else 1`] = `
"<script setup lang="ts">
if (foo)
{
  bar();
}
else if (baz)
{
  qux();
}
else
{
  quux();
}
</script>

<template>
  <button
    type="button"
    @click="
      () =>
      {
        if (foo)
        {
          bar();
        }
        else if (baz)
        {
          qux();
        }
        else
        {
          quux();
        }
      }
    "
  >
    Click Me
  </button>
</template>
"
`;
